--- a/src/app/allModules/pages/task-group/task-group.component.html
+++ b/src/app/allModules/pages/task-group/task-group.component.html
@@ -284,7 +284,7 @@
                       </div>
                     </div> -->
                     <div fxLayout="row" fxLayoutAlign="end">
-                      <button (click)="AddTaskSubGroupToTable()" mat-stroked-button
+                      <button (click)="AddTaskSubGroupToTable()" *ngIf="EnableAddTaskSubGroupButton" mat-stroked-button
                         style="margin-left: 10px;height: 30px;color: #efb577;"><span
                           style="color: #efb577;">Add</span></button>
                       <!-- <button (click)="RemoveSelectedRows()" mat-stroked-button
@@ -417,7 +417,7 @@
 
                           <ng-container matColumnDef="ActualStartDate">
                             <th mat-header-cell *matHeaderCellDef>Ac. St. Dt.</th>
-                            <td mat-cell *matCellDef="let row; let index = index"  [formGroupName]="index">                     
+                            <td mat-cell *matCellDef="let row; let index = index" [formGroupName]="index">
                               <input matInput [matDatepicker]="picker23" (click)="picker23.open()"
                                 formControlName="ActualStartDate" style="outline: 1px solid gray; height: 20px;">
                               <mat-datepicker #picker23></mat-datepicker>
@@ -444,7 +444,8 @@
                           <ng-container matColumnDef="ActualEffort">
                             <th mat-header-cell *matHeaderCellDef> Ac Effort </th>
                             <td mat-cell *matCellDef="let row; let index = index" [formGroupName]="index">
-                              <input matInput formControlName="ActualEffort" style="outline: 1px solid gray; height: 20px;">
+                              <input matInput formControlName="ActualEffort"
+                                style="outline: 1px solid gray; height: 20px;">
                               <span class="pl-4 errorClass" *ngIf="SprintFormGroup.get('Sprints').controls[index].get('ActualEffort').touched && 
                         SprintFormGroup.get('Sprints').controls[index].get('ActualEffort').hasError('required')">
                                 *
@@ -456,7 +457,7 @@
                             <th mat-header-cell *matHeaderCellDef style="width: 40px;"> Action </th>
                             <td mat-cell *matCellDef="let row; let index = index" style="width: 40px;">
                               <img class="removeIcon" src="assets/images/remove-button.png"
-                                (click)="RemoveTaskSubGroupFromTable()">
+                                (click)="RemoveTaskSubGroupFromTable(index)">
                             </td>
                           </ng-container>
 
@@ -479,8 +480,8 @@
 
               <div fxLayout>
                 <div fxFlex fxLayoutAlign="end">
-                  <button class="float" mat-fab *ngIf="SelectedTaskGroup.TaskGroupID" style="background-color: #f6b570; z-index: 100;"
-                    (click)="ResetControl()">
+                  <button class="float" mat-fab *ngIf="EnableAddTaskGroupButton"
+                    style="background-color: #f6b570; z-index: 100;" (click)="ResetControl()">
                     <mat-icon style="color: white;">add</mat-icon>
                   </button>
                 </div>
